fixed backend and database connectivity

--- a/backend/CRM.Api/appsettings.json
+++ b/backend/CRM.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=YourDatabase;Username=YourUsername;Password=YourPassword"
+    "DefaultConnection": "Host=localhost;Port=2345;Database=test;Username=postgres;Password=postgres"
   },
   "AllowedHosts": "*"
 }
