--- a/backend/CRM.Api/appsettings.Development.json
+++ b/backend/CRM.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=2345;Database=test;Username=postgres;Password=postgres"
+  },
+  "AllowedHosts": "*"
 }
