--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   postgres:
     image: postgres
@@ -17,7 +15,7 @@ services:
       source: POSTGRES_DATA
       target: /data/postgresdb
     networks:
-      - DATABASE
+      - CRM
   pgadmin:
     image: dpage/pgadmin4
     env_file:
@@ -30,10 +28,10 @@ services:
     ports:
       - "8888:80"
     networks:
-      - DATABASE
+      - CRM
 networks:
-  DATABASE:
-    name: DATABASE
+  CRM:
+    name: CRM
 volumes:
   POSTGRES_DATA:
     name: POSTGRES_DATA
