--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint ./src --fix --ext ts,tsx && prettier --write .",
+    "lint": "eslint ./src --fix --ext ts,tsx",
     "preview": "vite preview",
     "test": "vitest"
   },
@@ -14,13 +14,10 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.13",
     "@mui/system": "^5.15.14",
-    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "uuid": "^9.0.1",
-    "xlsx": "^0.18.5"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
@@ -30,14 +27,10 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "@vitejs/plugin-react": "^4.3.3",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint": "^8.57.1",
     "jsdom": "^24.0.0",
     "prettier": "3.2.5",
     "typescript": "^5.6.3",
